<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0"><modelVersion>4.0.0</modelVersion>

    <artifactId>Lippia-mobile-sample-project</artifactId>
    <url>https://maven.apache.org</url>
    <packaging>jar</packaging>
    <name>Lippia-mobile-sample-project</name>
    <version>1.0.0</version>

    <parent>
        <groupId>io.lippia</groupId>
        <artifactId>root</artifactId>
        <version>3.3.0.4</version>
    </parent>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.build.timestamp.format>dd-MM-yyyy-HH-mm-ss</maven.build.timestamp.format>
        <buildIdentifier>Tella_Android_Testing_${maven.build.timestamp}</buildIdentifier>
        <crowdar.cucumber.filter>@testSecurity</crowdar.cucumber.filter>
        <crowdar.driverHub></crowdar.driverHub>
        <crowdar.cucumber.plugins>--plugin pretty --plugin com.aventstack.extentreports.cucumber.adapter.ExtentCucumberAdapter: --plugin com.crowdar.tella.listeners.CucumberListener:</crowdar.cucumber.plugins>
        <test-manager-plugin>--plugin com.crowdar.tella.report.TestManagerReporter:</test-manager-plugin>
        <crowdar.cucumber.option>src/test/resources/features --glue com/crowdar --glue com/crowdar/bdd/cukes --tags ${crowdar.cucumber.filter} --tags 'not @Ignore' --plugin com.crowdar.tella.report.TestManagerReporter: --plugin com.crowdar.tella.report.Reporter: --plugin pretty</crowdar.cucumber.option>
        <crowdar.projectType.driverCapabilities.jsonFile>src/main/resources/capabilities/androidCapabilities.json</crowdar.projectType.driverCapabilities.jsonFile>
        <crowdar.remoteDriverType></crowdar.remoteDriverType>
        <crowdar.reporter.avent>true</crowdar.reporter.avent>
        <crowdar.extent.host.name>LocalMachine</crowdar.extent.host.name>
        <crowdar.extent.environment>Local</crowdar.extent.environment>
        <crowdar.extent.user.name>User</crowdar.extent.user.name>
        <crowdar.app.location>${env.APPLOCAL}</crowdar.app.location>

        <crowdar.bs.hub>https://${env.BSUSER}:${env.AUTHTOKEN}@hub-cloud.browserstack.com/wd/hub</crowdar.bs.hub>
        <crowdar.bs.device>${env.BSDEVICE}</crowdar.bs.device>
        <crowdar.bs.os>${env.BSOS}</crowdar.bs.os>
        <crowdar.bs.app>${env.BSAPP}</crowdar.bs.app>
        <crowdar.bs.capabilities>src/main/resources/capabilities/browserStackCapabilities.json</crowdar.bs.capabilities>
        <crowdar.bsIOS.device>${env.BSDEVICE_IOS}</crowdar.bsIOS.device>
        <crowdar.bsIOS.os>${env.BS_IOS}</crowdar.bsIOS.os>
        <crowdar.bsIOS.app>${env.BSAPP_IOS}</crowdar.bsIOS.app>
    </properties>

    <profiles>
        <profile>
            <id>Local</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <crowdar.driverHub>http://127.0.0.1:4723/</crowdar.driverHub>
                <cucumber.runner>testngSecuencial.xml</cucumber.runner>
                <crowdar.avd>Pixel3</crowdar.avd>
                <crowdar.appLocation>C:\\\\Workspace\\\\app.apk</crowdar.appLocation>
                <crowdar.deviceName>Pixel3</crowdar.deviceName>
                <crowdar.projectType.driverCapabilities.jsonFile>src/main/resources/capabilities/emulatedCapabilities.json</crowdar.projectType.driverCapabilities.jsonFile>
            </properties>
        </profile>

        <profile>
            <id>StackLocal</id>
            <properties>
                <crowdar.driverHub>http://localhost:4444/</crowdar.driverHub>
                <crowdar.avd>pixelc</crowdar.avd>
                <crowdar.appLocation>/root/tmp/sample_apk/app-release.apk</crowdar.appLocation>
                <crowdar.deviceName>Android Emulator</crowdar.deviceName>
            </properties>
        </profile>

        <profile>
            <id>Android</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <crowdar.projectType>MOBILE_ANDROID</crowdar.projectType>
            </properties>
        </profile>

        <profile>
            <id>IOS</id>
            <properties>
                <crowdar.projectType>MOBILE_IOS</crowdar.projectType>
            </properties>
        </profile>

        <profile>
            <id>BrowserStack</id>
            <properties>
                <cucumber.runner>testngSecuencial.xml</cucumber.runner>
                <crowdar.deviceName>${crowdar.bs.device}</crowdar.deviceName>
                <crowdar.os.version>${crowdar.bs.os}</crowdar.os.version>
                <crowdar.appLocation>${crowdar.bs.app}</crowdar.appLocation>
                <crowdar.projectType.driverCapabilities.jsonFile>${crowdar.bs.capabilities}</crowdar.projectType.driverCapabilities.jsonFile>
                <crowdar.driverHub>${crowdar.bs.hub}</crowdar.driverHub>
                <crowdar.projectType>MOBILE_ANDROID</crowdar.projectType>
            </properties>
        </profile>

        <profile>
            <id>BrowserStackIOS</id>
            <properties>
                <cucumber.runner>testngSecuencial.xml</cucumber.runner>
                <crowdar.deviceName>${crowdar.bsIOS.device}</crowdar.deviceName>
                <crowdar.os.version>${crowdar.bsIOS.os}</crowdar.os.version>
                <crowdar.appLocation>${crowdar.bsIOS.app}</crowdar.appLocation>
                <crowdar.projectType.driverCapabilities.jsonFile>${crowdar.bs.capabilities}</crowdar.projectType.driverCapabilities.jsonFile>
                <crowdar.driverHub>${crowdar.bs.hub}</crowdar.driverHub>
                <crowdar.projectType>MOBILE_IOS</crowdar.projectType>
            </properties>
        </profile>

        <profile>
            <id>secuencial</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <runner>testngSecuencial.xml</runner>
            </properties>
        </profile>

        <profile>
            <id>parallel</id>
            <properties>
                <runner>testngParallel.xml</runner>
            </properties>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>io.lippia</groupId>
            <artifactId>core</artifactId>
            <version>3.3.0.4</version>
        </dependency>
        <dependency>
            <groupId>io.lippia.report</groupId>
            <artifactId>extentreports-cucumber4-adapter</artifactId>
            <version>1.1.0.10</version>
        </dependency>
        <dependency>
            <groupId>io.lippia.report</groupId>
            <artifactId>ltm-cucumber4-adapter</artifactId>
            <version>1.6</version>
        </dependency>
    </dependencies>

    <build>
        <testResources>
            <testResource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </testResource>
            <testResource>
                <directory>src/test/resources</directory>
                <filtering>true</filtering>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.2</version>
                <configuration>
                    <suiteXmlFiles>
                        <suiteXmlFile>${cucumber.runner}</suiteXmlFile>
                    </suiteXmlFiles>

                    <systemPropertyVariables>
                        <TEST_MANAGER_API_HOST>https://crowdaracademy.testmanager.lippia.io/</TEST_MANAGER_API_HOST>
                        <TEST_MANAGER_RUN_NAME>AUTO-${crowdar.deviceName}-${crowdar.cucumber.filter}</TEST_MANAGER_RUN_NAME>
                        <TEST_MANAGER_PROJECT_CODE>TELL</TEST_MANAGER_PROJECT_CODE>
                        <TEST_MANAGER_USERNAME>${env.LTM_GENERAL}</TEST_MANAGER_USERNAME>
                        <TEST_MANAGER_PASSWORD>${env.LTM_GENERAL_PASS}</TEST_MANAGER_PASSWORD>
                        <TEST_MANAGER_REPOSITORY_URL>https://github.com/Horizontal-org/Tella-Testing.git</TEST_MANAGER_REPOSITORY_URL>
                        <TEST_MANAGER_REPOSITORY_BRANCH>main</TEST_MANAGER_REPOSITORY_BRANCH>
                        <buildIdentifier>${buildIdentifier}</buildIdentifier>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>9</source>
                    <target>9</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>
</project>
